# aihero

./: .gitignore  README.md
.streamlit/: secrets.toml
course/: day_1.ipynb  pyproject.toml
course/data/: autogen_data_processed.json
day_2/data-engineering-rag/: data-processing.ipynb
project/: Day_5_Evaluation_Assignment.ipynb  README.md  app.py  chunks.pkl  constitutionAI.docx  day_2-3-4_assignment.ipynb  day_2-3_assignment.ipynb  day_2_assignment.ipynb  embeddings.npy  ingest.py  main.py  packages.txt  pyproject.toml  requirements.txt  search_agent.py
project/.ipynb_checkpoints/: day_1_assignment-checkpoint.ipynb
project/logs/: aut_agent_v2_20250928_172003_561fe7.json  aut_agent_v2_20250928_175535_afbcba.json  aut_agent_v2_20250928_181142_ba5108.json  aut_agent_v2_20250928_181145_9f3d2b.json  aut_agent_v2_20250928_181153_2b8619.json  aut_agent_v2_20250928_181206_5d5492.json  aut_agent_v2_20250928_181213_79be66.json  aut_agent_v2_20250928_181219_23bac2.json  aut_agent_v2_20250928_181228_4dfc20.json  aut_agent_v2_20250928_181236_65c9a6.json  aut_agent_v2_20250928_181244_acc083.json  aut_agent_v2_20250928_181250_4f0447.json  autogen_agent_20250928_171138_46accd.json  autogen_agent_20250928_171321_e3a625.json  autogen_agent_20250928_171450_0ddd80.json
project/pdfs_to_index/: mgt 7 point agenda.docx  ~$t 7 point agenda.docx  ~WRL0005.tmp
project/rag_data/: chunks.pkl  embeddings.npy
